--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ uvicorn = {extras = ["all"], version = "^0.26.0"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
+sqlalchemy = "^2.0.25"
+isort = "^5.13.2"
+alembic = "^1.13.1"
 
 
 [build-system]
