--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ version: '3.9'
 
 services:
   app:
-    build: ./docker
+    build: ./docker/python
     volumes:
-      # - .dockervenv:/src/.venv
       - .venv:/src/.venv
       - .:/src
     ports:
@@ -23,6 +22,19 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - 33306:3306
+
+  minio:
+    build: ./docker/minio
+    container_name: minio
+    environment:
+      - MINIO_ROOT_USER=rootroot
+      - MINIO_ROOT_PASSWORD=secretsecret
+    ports:
+      - 9000:9000
+      - 9001:9001
+    command: server --console-address ":9001" /data
+    volumes:
+      - ./docker/minio/data:/data
 
 volumes:
   mysql_data:
