--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.109.0"
 uvicorn = {extras = ["all"], version = "^0.26.0"}
+boto3 = "^1.34.27"
 
 
 [build-system]
