--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - WATCHFILES_FORCE_POLLING=true
     depends_on:
       - minio
+      - mailhog
 
   db:
     image: mysql:8.0
@@ -37,6 +38,18 @@ services:
     command: server --console-address ":9001" /data
     volumes:
       - ./docker/minio/data:/data
+
+  mailhog:
+    container_name: mailhog
+    build: ./docker/mailhog
+    ports:
+      - 8025:8025
+    environment:
+      MH_STORAGE: maildir
+      MH_MAILDIR_PATH: /tmp
+    volumes:
+      # メールデータ
+      - ./docker/mailhog/maildir:/tmp
 
 volumes:
   mysql_data:
