ディレクトリ構成の練習

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         "editor.formatOnType": true,
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true
+            "source.organizeImports": "explicit"
         },
         "editor.renderWhitespace": "all",
     },
@@ -25,4 +25,5 @@
     ],
     "files.eol": "\n",
     "editor.tabSize": 4,
+    "python.analysis.typeCheckingMode": "strict",
 }
