--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+name: fastapi-docker
 
 services:
   app:
@@ -12,17 +12,17 @@ services:
     environment:
       - WATCHFILES_FORCE_POLLING=true
 
-  db:
-    image: mysql:8.0
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes' # rootアカウントをパスワードなしで作成
-      MYSQL_DATABASE: 'fastapi'
-      TZ: 'Asia/Tokyo'
-    volumes:
-      - mysql_data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
-    ports:
-      - 33306:3306
+#   db:
+#     image: mysql:8.0
+#     environment:
+#       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes' # rootアカウントをパスワードなしで作成
+#       MYSQL_DATABASE: 'fastapi'
+#       TZ: 'Asia/Tokyo'
+#     volumes:
+#       - mysql_data:/var/lib/mysql
+#     command: --default-authentication-plugin=mysql_native_password
+#     ports:
+#       - 33306:3306
 
-volumes:
-  mysql_data:
+# volumes:
+#   mysql_data:
